--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -1,4 +1,4 @@
 - markdown: |
-    Hey @tasleson, a file(s) you own were modified in this PR! Could you take a look?
+    Hey @slvignesh05, a new pr?
   pathFilter:
     - '*'
